# hpc-final-router

./: .gitignore  CMakeLists.txt  README.md
container/: Apptainer.def
docs/: README.md  bench16_retest_plan.md  final_experiment_report.md  methods_and_results_summary.md  nthu_gpu_feasibility.md  nthu_openmp_design.md  nthu_source_baselines.md  report_outline.md  rerun_priority.md  session_handoff.md  taiwania_runbook.md
include/: router.hpp
results/: README.md  bench16_strategy_catalog.csv  bench16_strategy_matrix_r2_speedup_matrix.csv  bench16_strategy_matrix_r2_speedups.csv  bench16_strategy_matrix_r2_summary.csv  cross_validation_checks.csv  method_speedups_summary.csv  nctu_tuned_best_r3_summary.csv  nctu_tuned_best_summary.csv  real_baselines_summary.csv
scripts/: README.md  aggregate_bench16_strategy_matrix.py  compare_variant_summary.py  continue_after_fast_continuity_a3.sh  download_file.sh  dump_overflow_edges.py  evaluate_route.py  fetch_ispd08.sh  fetch_nctugr.sh  plot.py  rank_router_results.py  refresh_indexes.sh  retry_submit_until_success.sh  run_aggressive_experiment_queue.sh  run_bench16_strategy_one.sh  run_construct_only_remaining_queue.sh  run_nctu_a3_greedy_maze_refine.sh  run_nctu_param_sweep.sh  run_nctu_selected_param_compare.sh  run_nctugr_ispd08.sh  run_nthu_adaptive_p2.sh  run_nthu_ispd08.sh  run_nthu_variant_sweep.sh  run_repair_experiment_queue.sh  run_with_refresh.sh  slurm_nthu_adaptive_p2_job.sh  slurm_nthu_variant_sweep_job.sh  slurm_real_candidate_gpu_compare_job.sh  submit_a5_fast_astar_repair.sh  submit_a5_fast_output_repair.sh  submit_afterany_hook.sh  submit_bench16_strategy_matrix.sh  (+151 more)
(+117 files in other folders)
